force-app/main/default/objects/SIS_Legal_Entity__c/SIS_Legal_Entity__c.object-meta.xml
<CustomObject>
    <label>Entité juridique</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entités juridiques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>