force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Creation_date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Creation_date__c</fullName>
    <label>Creation date</label>
    <type>Date</type>
</CustomField>