force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SIS_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>