force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_Billing_City__c</fullName>
    <label>City</label>
    <type>TextArea</type>
</CustomField>