force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_Billing_Postal_Code__c</fullName>
    <label>Postal code</label>
    <type>TextArea</type>
</CustomField>