force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_Billing_Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>