force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_Capital__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_Capital__c</fullName>
    <label>Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>