force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_CFA__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_CFA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CFA</label>
    <type>Checkbox</type>
</CustomField>