force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_Country__c</fullName>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>