force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_NAF__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_NAF__c</fullName>
    <label>APE code</label>
    <type>TextArea</type>
</CustomField>