force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_NDA__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_NDA__c</fullName>
    <label>NDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>