force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_RCS__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_RCS__c</fullName>
    <label>RCS</label>
    <type>TextArea</type>
</CustomField>