force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_SIREN__c</fullName>
    <label>SIREN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>