force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_SIRET__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_SIRET__c</fullName>
    <label>SIRET</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>