force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Entity_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Secondaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>