force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_representative__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entit_s_juridiques</relationshipName>
    <type>Lookup</type>
</CustomField>