force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Legal_Status__c</fullName>
    <label>Legal status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA</fullName>
                <label>SA (Société Anonyme à Directoire et Conseil de Surveillance)</label>
            </value>
            <value>
                <fullName>SAS</fullName>
                <label>SAS (société par actions simplifiée)</label>
            </value>
            <value>
                <fullName>Association</fullName>
                <label>(Association sans but lucratif)</label>
            </value>
            <value>
                <fullName>SCI (Société civile immobilière)</fullName>
            </value>
            <value>
                <fullName>Consulting Company Limited - Société de droit chinois</fullName>
            </value>
            <value>
                <fullName>Holding - Société de droit hongkongais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>