force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_ParentEntity__c.field-meta.xml
<CustomField>
    <fullName>SIS_ParentEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent entity</label>
    <referenceTo>SIS_Legal_Entity__c</referenceTo>
    <relationshipLabel>Entités juridiques</relationshipLabel>
    <relationshipName>Entit_s_juridiques</relationshipName>
    <type>Lookup</type>
</CustomField>