force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_Training_organization__c.field-meta.xml
<CustomField>
    <fullName>SIS_Training_organization__c</fullName>
    <label>Training organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>