force-app/main/default/objects/SIS_Legal_Entity__c/fields/SIS_VATNumber__c.field-meta.xml
<CustomField>
    <fullName>SIS_VATNumber__c</fullName>
    <label>VAT Number</label>
    <type>TextArea</type>
</CustomField>