force-app/main/default/objects/SIS_Legal_Entity__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>